# money-flow

./: .gitignore  README.md  bunq_local.py  bunq_local_test.py  deploy.sh  firebase.json  kraken_local.py  main.py  main_test.py  pyproject.toml
functions/bunq_money_flow/: .env.example  main.py  requirements.txt
functions/bunq_money_flow/src/: __init__.py  allocation.py  bunq_lib.py  money_flow.py  secret_loader.py  security_monkey_patch.py  strategies.py  transfer_flow.py  transfer_flows.py  types.py
functions/kraken_crypto_automation/: .env.example  main.py
functions/kraken_crypto_automation/src/: kraken_client.py  kraken_client_adapter.py  order_flows.py  orders.py  strategies.py
lib/: common_strategies.py  firestore.py  flow_processor.py
scripts/: bunq_deploy.sh
