[tool.poetry]
name = "money-flow"
version = "0.1.0"
description = ""
authors = ["marnix le noble <github.com/marnixlenoble>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
firebase-admin = "^6.3.0"
firebase-functions = "^0.2.0"
google-cloud-secret-manager = "^2.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"


[tool.poetry.group.bunq.dependencies]
bunq-sdk = {git = "https://github.com/bunq/sdk_python.git", rev = "1.24.16.36"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
